--- a/source/less/type.less
+++ b/source/less/type.less
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Quattrocento+Sans:700";
 //Quattrocento Sans Bold
 
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,600,700';
+@import "https://fonts.googleapis.com/css?family=Open+Sans:400,600,700";
 //Open Sans Regular, Bold, Semibold
