Width bug fixed

--- a/source/less/components/about.less
+++ b/source/less/components/about.less
@@ -1,14 +1,13 @@
 .about {
+  min-width: 1200px;
   background-color: @white;
   padding-top: 80px;
   padding-bottom: 100px;
   border-bottom: 1px solid @grey-light;
-
   &__wrap {
     .wrapper;
     max-width: 1140px;
   }
-
   &__title {
     position: relative;
     font-family: "Quattrocento Sans", Arial, sans-serif;
@@ -20,7 +19,6 @@
     margin-bottom: 57px;
     padding-left: 23px;
     text-transform: uppercase;
-
     &:before {
       position: absolute;
       display: block;
@@ -32,16 +30,13 @@
       top: 3px;
     }
   }
-
   &__content {
     display: flex;
     justify-content: space-between;
   }
-
   &__mission-wrap {
     width: 57%;
   }
-
   &__mission {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: @font-size-base;
@@ -49,53 +44,44 @@
     color: @grey-blue;
     margin: 0;
     margin-bottom: 27px;
-
     &:nth-child(2) {
       margin-bottom: 54px;
     }
   }
-
   &__social {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    .list-to-flex;
     width: 46%;
-
     li {
+      text-align: center;
+      width: 20%;
       margin-right: 1px;
     }
-
     a {
       display: block;
-      width: 25px;
       height: 25px;
-      padding: 18px;
+      padding: 30% 0;
       background-color: @grey-darken;
       font-size: 0;
-
       &:hover {
         background-color: @grey;
+        transition: background-color .2s;
       }
     }
     svg {
       fill: @white;
     }
   }
-
   &__goals {
     width: 40%;
     list-style: none;
     padding: 0;
     margin: 0;
   }
-
   &__goals-item {
     margin: 0;
     display: flex;
     justify-content: space-between;
   }
-
   &__goals-number {
     display: block;
     width: 50px;
@@ -109,13 +95,12 @@
     font-family: "Quattrocento Sans", Arial, sans-serif;
     font-size: @font-size-base + .4;
     font-weight: bold;
+    margin-right: 3%;
   }
-
   &__goals-content {
     width: 85%;
     margin-bottom: 32px;
   }
-
   &__goals-name {
     margin: 0;
     font-family: "Quattrocento Sans", Arial, sans-serif;
@@ -126,7 +111,6 @@
     margin-bottom: 8px;
     text-transform: uppercase;
   }
-
   &__goals-text {
     margin: 0;
     font-family: "Open Sans", Arial, sans-serif;
