--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -23,3 +23,7 @@
 @font-size-h2:     @font-size-base + 2;
 
 @font-family-base: "Open Sans", Arial, sans-serif;
+
+@min-width-1: 700px;
+@min-width-2: 1170px;
+@max-width-1: 1170px;
