--- a/source/less/components/contact.less
+++ b/source/less/components/contact.less
@@ -1,14 +1,13 @@
 .contact {
+  min-width: 1200px;
   position: relative;
   background-color: @white;
   padding-top: 70px;
   padding-bottom: 100px;
-
   &__wrap {
     .wrapper;
     max-width: 1140px;
   }
-
   &__title {
     position: relative;
     font-family: "Quattrocento Sans", Arial, sans-serif;
@@ -20,7 +19,6 @@
     margin-bottom: 275px;
     padding-left: 23px;
     text-transform: uppercase;
-
     &:before {
       position: absolute;
       display: block;
@@ -32,17 +30,14 @@
       top: 3px;
     }
   }
-
   &__content {
     display: flex;
     justify-content: space-between;
   }
-
   &__inner {
     margin-top: 165px;
     width: 48%;
   }
-
   &__subtitle {
     font-family: "Quattrocento Sans", Arial, sans-serif;
     font-size: @font-size-base + .4;
@@ -53,7 +48,6 @@
     margin-bottom: 32px;
     text-transform: uppercase;
   }
-
   &__text {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: @font-size-base;
@@ -62,21 +56,18 @@
     margin: 0;
     margin-bottom: 30px;
   }
-
   &__form {
     background-color: @white;
     z-index: 1;
     padding: 30px;
     width: 48%;
   }
-
   &__input-wrap {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: 24px;
   }
-
   &__label {
     width: 48%;
     display: block;
@@ -86,13 +77,11 @@
     color: @grey-blue;
     font-weight: bold;
     text-transform: uppercase;
-
     &--message {
       width: 100%;
       margin-bottom: 30px;
     }
   }
-
   &__input {
     border: none;
     padding: 0 12px;
@@ -100,13 +89,10 @@
     width: 90%;
     height: 45px;
     background-color: @grey-lightest;
-
     &--message {
       width: 95%;
       height: 160px;
     }
-
-
     &--btn {
       width: 27%;
       display: block;
@@ -120,17 +106,23 @@
       background-color: @green;
       text-align: center;
     }
-
     &:focus {
       outline: none;
     }
   }
-
   &__map {
     width: 100%;
     margin: 0 auto;
     position: absolute;
     top: 160px;
     height: 345px;
+  }
+  &__overlay {
+    background: transparent;
+    position: relative;
+    width: 100%;
+    height: 345px;
+    top: 345px;
+    margin-top: -345px;
   }
 }
