--- a/source/less/components/features.less
+++ b/source/less/components/features.less
@@ -1,13 +1,12 @@
 .features {
+  min-width: 1200px;
   background-color: @blue;
   padding-top: 80px;
   padding-bottom: 120px;
-
   &__wrap {
     .wrapper;
     max-width: 1140px;
   }
-
   &__title {
     position: relative;
     font-family: "Quattrocento Sans", Arial, sans-serif;
@@ -19,7 +18,6 @@
     margin-bottom: 57px;
     padding-left: 23px;
     text-transform: uppercase;
-
     &:before {
       position: absolute;
       display: block;
@@ -31,23 +29,19 @@
       top: 3px;
     }
   }
-
   &__list {
     .list-to-flex;
     margin-bottom: 30px;
   }
-
   &__item {
     width: 32%;
     margin-bottom: 30px;
   }
-
   &__img {
     width: 100%;
     display: block;
     margin-bottom: 32px;
   }
-
   &__name {
     font-family: "Quattrocento Sans", Arial, sans-serif;
     font-size: @font-size-base + .2;
@@ -58,7 +52,6 @@
     text-transform: uppercase;
     margin-bottom: 12px;
   }
-
   &__text {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: @font-size-base;
