--- a/source/less/components/gallery.less
+++ b/source/less/components/gallery.less
@@ -1,13 +1,12 @@
 .gallery {
+  min-width: 1200px;
   background-color: @blue;
   padding-top: 80px;
   padding-bottom: 60px;
-
   &__wrap {
     .wrapper;
     max-width: 1140px;
   }
-
   &__title {
     position: relative;
     font-family: "Quattrocento Sans", Arial, sans-serif;
@@ -19,7 +18,6 @@
     margin-bottom: 57px;
     padding-left: 23px;
     text-transform: uppercase;
-
     &:before {
       position: absolute;
       display: block;
@@ -31,31 +29,25 @@
       top: 3px;
     }
   }
-
   &__list {
     .list-to-flex;
     flex-wrap: wrap;
     margin-bottom: 30px;
   }
-
   &__item {
     width: 32%;
     position: relative;
     margin-bottom: 30px;
-
     &:hover {
       .gallery__overlay {
         display: flex;
       }
     }
   }
-
   &__img {
     display: block;
     width: 100%;
   }
-
-
   &__overlay {
     flex-direction: column;
     justify-content: space-between;
@@ -68,14 +60,12 @@
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, .4);
-
     svg {
       fill: @white;
       margin: 0 auto;
       margin-top: 30%;
     }
   }
-
   &__name {
     background-color: @blue-dark;
     padding: 9px 0 9px 20px;
@@ -87,7 +77,6 @@
     margin: 0;
     text-transform: uppercase;
   }
-
   &__btn {
     box-sizing: border-box;
     display: block;
@@ -104,5 +93,9 @@
     text-transform: uppercase;
     padding: 6px 0;
     text-align: center;
+    &:hover {
+      border-color: @green;
+      background-color: @green;
+    }
   }
 }
