--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -1,8 +1,8 @@
 .page-footer {
+  min-width: 1200px;
   background-color: @blue;
   padding-top: 40px;
   padding-bottom: 35px;
-
   &__wrap {
     .wrapper;
     max-width: 1140px;
@@ -10,24 +10,21 @@
     justify-content: space-between;
     align-items: baseline;
   }
-
   &__copyright {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: @font-size-base - .2;
     line-height: @line-height-base;
     color: @white;
   }
-
   &__social {
     .list-to-flex;
     align-items: center;
     width: 14%;
-
     a {
       display: block;
       font-size: 0;
+      height: 18px;
     }
-
     svg {
       fill: @white;
     }
