--- a/source/less/components/services.less
+++ b/source/less/components/services.less
@@ -1,13 +1,12 @@
 .services {
+  min-width: 1200px;
   background-color: @white;
   padding-top: 80px;
   padding-bottom: 165px;
-
   &__wrap {
     .wrapper;
     max-width: 1140px;
   }
-
   &__title {
     position: relative;
     font-family: "Quattrocento Sans", Arial, sans-serif;
@@ -19,7 +18,6 @@
     margin-bottom: 80px;
     padding-left: 23px;
     text-transform: uppercase;
-
     &:before {
       position: absolute;
       display: block;
@@ -31,25 +29,21 @@
       top: 3px;
     }
   }
-
   &__list {
     .list-to-flex;
     flex-wrap: wrap;
     margin-bottom: 30px;
   }
-
   &__item {
     width: 23%;
     margin-bottom: 91px;
     text-align: center;
-
     svg {
       width: 18%;
       fill: @green;
       margin-bottom: 30px;
     }
   }
-
   &__name {
     font-family: "Quattrocento Sans", Arial, sans-serif;
     font-size: @font-size-base + .1;
@@ -60,7 +54,6 @@
     margin-bottom: 25px;
     text-transform: uppercase;
   }
-
   &__text {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: @font-size-base;
